Fixed button animation duration overlap issue

--- a/src/App.css
+++ b/src/App.css
@@ -175,7 +175,6 @@ input::-webkit-inner-spin-button {
   background-color: white;
   color: black;
   border: 2px solid #000000;
-  transition-duration: 0.4s;
   font-size: 1vw;
   padding: 1% 3%;
 }
@@ -214,7 +213,6 @@ input::-webkit-inner-spin-button {
   background-color: white;
   color: black;
   border: 2px solid #000000;
-  transition-duration: 0.4s;
   font-size: 1vw;
   padding: 1% 3%;
 }
